# pgh-parking-ticket-scanner

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 5bdb0e612f76_add_composite_index_on_issue_date_and_.py  beef56fae821_add_pg_trgm_extension_and_gin_indexes.py  fbcb6c5a7f9b_initial_schema.py
docs/: architecture.rst  index.rst  learnings.rst  scan-algorithm.rst  sequencing.md
infra/: compose.yaml
scripts/: migrate_to_postgres.py  parse_mullvad_proxies.py
src/pgh_ticket/: __init__.py  __main__.py  cli.py  db.py  utils.py  validators.py
src/pgh_ticket/client/: __init__.py  client.py  types.py
src/pgh_ticket/commands/: __init__.py  backfill.py  base.py  common.py  list.py  lookup.py  scan.py  stats.py  sync.py
src/pgh_ticket/commands/backfill/: __init__.py  details.py  geocode.py  keys.py
src/pgh_ticket/commands/errors/: __init__.py  _table.py  clear.py  list.py  retry.py  stats.py
src/pgh_ticket/commands/scan/: command.py  scanner.py
src/pgh_ticket/commands/sync/: command.py  syncer.py
src/pgh_ticket/config/: __init__.py  app.py  base.py  db.py  mapbox.py  portal.py  proxy.py
src/pgh_ticket/core/: __init__.py  database.py  fmt.py  utils.py  workers.py
src/pgh_ticket/core/client/: __init__.py  client.py  exceptions.py  pool.py  types.py
src/pgh_ticket/core/mapbox/: __init__.py  client.py  types.py
src/pgh_ticket/models/: __init__.py  base.py  cluster.py  error_log.py  location.py  scan.py  ticket.py
src/pgh_ticket/repos/: __init__.py  cluster.py  error_log.py  location.py  scan.py  ticket.py
(+4 files in other folders)
