[project]
name = "pgh-ticket"
version = "0.1.0"
description = "Pittsburgh parking ticket scanner"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20",
    "aiohttp>=3",
    "aiohttp-socks>=0",
    "aiohttp-retry>=2",
    "beautifulsoup4>=4",
    "cyclopts>=4",
    "greenlet>=3",
    "lxml>=5",
    "pydantic>=2",
    "sqlalchemy>=2.0.49",
    "platformdirs>=4.9.6",
    "rich>=13",
]

[project.scripts]
pgh-ticket = "pgh_ticket.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyrefly>=1.0.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
